# Websocket_Server

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  config.toml  demo.sh  deny.toml  design_notes.md  development.md  pre-commit-hook.sh  pyproject.toml  rust-toolchain.toml  rustfmt.toml  setup-hooks.sh  tarpaulin-report.html  test_coverage.md  websocket_test.sh
.cargo/: config.toml
common/: Cargo.toml
common/tests/: lib.rs
config/: default.toml
crates/backend/: Cargo.toml
crates/backend-bin/: Cargo.toml
crates/backend-bin/config/: default.toml
crates/backend-bin/src/: main.rs
crates/backend-lib/: Cargo.toml
crates/backend-lib/src/: config.rs  error.rs  lib.rs  meet.rs  meet_actor.rs  messages.rs  metrics.rs  session.rs  storage.rs  websocket.rs  ws_router.rs
crates/backend-lib/src/auth/: mod.rs  password.rs  persistent_session.rs  rate_limit.rs  service.rs  service_impl.rs  session.rs  token_generator.rs
crates/backend-lib/src/config/: config_tests.rs
crates/backend-lib/src/handlers/: live.rs  mod.rs
crates/backend-lib/src/middleware/: middleware_tests.rs  mod.rs  rate_limit.rs  tests.rs
crates/backend-lib/src/validation/: mod.rs
crates/backend-lib/tests/: websocket_flow_tests.rs
crates/backend/src/: error.rs  lib.rs  meet_actor.rs  storage.rs  ws_router.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server-app/: Cargo.toml  README.md
crates/server-app/src/: config.rs  error.rs  lib.rs  meet.rs  meet_actor.rs  messages.rs  metrics.rs  storage.rs  websocket.rs  ws_router.rs
crates/server-app/src/auth/: mod.rs  password.rs  persistent_session.rs  rate_limit.rs  service.rs  service_impl.rs  session.rs  token_generator.rs
crates/server-app/src/config/: config_tests.rs
crates/server-app/src/handlers/: live.rs  mod.rs
crates/server-app/src/middleware/: middleware_tests.rs  mod.rs  rate_limit.rs
crates/server-app/src/validation/: mod.rs
crates/server-core/: Cargo.toml  README.md
crates/server-core/config/: default.toml
crates/server-core/src/: main.rs
crates/server-protocols/: README.md
crates/server-protocols/src/: lib.rs
documentation/: design_document.md  design_notes.md  development.md  security_audit.md  test_coverage.md
infrastructure/: Dockerfile  README.md
infrastructure/cdk/: cdk_app.py
server/: Cargo.toml
server/src/: auth.rs  error.rs  lib.rs  main.rs  meet.rs  meet_actor.rs  storage.rs  ws_router.rs
server/tests/: auth.rs  error.rs  meet.rs  meet_actor.rs  storage.rs  websocket.rs
src/: main.rs
tests/: Cargo.toml  README.md  lib.rs  test_utils.rs
tests/data/sessions/: session_key
tests/e2e/: network_resilience_test.sh  websocket_test.sh
tests/integration/: auth_flow_tests.rs  websocket_flow_tests.rs
tests/performance/: websocket_throughput.rs
tests/scripts/: README.md  minimal_connect_test.sh  minimal_test.sh  test_message.sh  test_msg.json  test_msg_format.sh  test_websocket.sh  wscat_test.sh
tests/unit/: config_tests.rs  error_tests.rs  live_handler_tests.rs  meet_tests.rs  middleware_tests.rs  password_tests.rs  rate_limit_tests.rs  ws_router_tests.rs
