[workspace]
members = ["crates/common", "crates/backend-lib", "crates/backend-bin", "tests"]
resolver = "2"

# single‑source every version/feature flag here
[workspace.dependencies]
axum        = { version = "0.8.3", features = ["ws", "macros"] }
tokio       = { version = "1.44.2", features = ["full"] }
tower-http  = { version = "0.6.2", features = ["cors", "trace"] }
serde       = { version = "1.0.219", features = ["derive"] }
serde_json  = "1.0.114"
tracing     = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
dashmap     = "6.1.0"
uuid        = { version = "1.7.0", features = ["v4"] }
scrypt      = "0.11.0"
rand        = "0.9.1"
anyhow      = "1.0.80"
thiserror   = "2.0.12"
futures-util = "0.3.30"
tower       = { version = "0.5.2", features = ["util"] }
tempfile    = "3.10.0"
