[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "7.0.0-rc2"
anyhow = "1.0"
futures-util = "0.3"
rand = "0.9"
scrypt = "0.11"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.8"
tower = "0.4"
