[package]
name    = "openlifter-backend-bin"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
openlifter-backend-lib = { path = "../backend-lib" }
tokio                  = { workspace = true, features = ["full"] }
tracing                = { workspace = true }
tracing-subscriber     = { workspace = true }
clap                   = { version = "4.5", features = ["derive"] }
config                 = "0.13"
figment                = "0.10" 