[package]
name    = "backend-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
openlifter-common = { path = "../common" }
axum              = { workspace = true }
tokio             = { workspace = true, features = ["full"] }
serde             = { workspace = true }
serde_json        = { workspace = true }
dashmap           = { workspace = true }
uuid              = { workspace = true }
scrypt            = { workspace = true }
rand              = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
futures-util      = { workspace = true }
async-trait       = "0.1.88"
config            = "0.15.11"
zeroize           = "1.8.1"
metrics           = "0.24.2"
argon2 = "0.5.3"
parking_lot = "0.12.3"

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["full"] }
tower    = { workspace = true }
