[package]
name    = "backend-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
openlifter-common = { path = "../common" }
axum              = { workspace = true }
tokio             = { workspace = true, features = ["full"] }
serde             = { workspace = true }
serde_json        = { workspace = true }
dashmap           = { workspace = true }
uuid              = { workspace = true }
scrypt            = { workspace = true }
rand              = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
futures-util      = "0.3.31"
async-trait       = "0.1.88"
config            = "0.15"
zeroize           = "1.8.1"
metrics           = "0.24.2"
argon2           = "0.5.3"
parking_lot      = "0.12.3"
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = "0.26.2"
once_cell = "1.21.3"
regex = "1.10.4"
lazy_static = "1.4.0"
chrono = { version = "0.4.34", features = ["serde"] }
base64 = "0.21.7"
aes-gcm = "0.10.3"
tempfile = "3.10.1"

[dev-dependencies]
tokio    = { workspace = true, features = ["full"] }
tower    = { workspace = true }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
rand = "0.8.5"
