[package]
name    = "backend-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
openlifter-common = { path = "../common" }
axum              = { workspace = true }
tokio             = { workspace = true, features = ["full"] }
serde             = { workspace = true }
serde_json        = { workspace = true }
dashmap           = { workspace = true }
uuid              = { workspace = true }
scrypt            = { workspace = true }
rand              = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
futures-util      = "0.3.31"
async-trait       = "0.1.88"
config            = "0.15"
zeroize           = "1.8.1"
metrics           = "0.24.2"
argon2           = "0.5.3"
tracing          = { workspace = true }
regex = "1.10.4"
chrono = { version = "0.4.34", features = ["serde"] }
base64 = "0.22.1"
aes-gcm = "0.10.3"
tempfile = "3.10.1"
tower-http.workspace = true

[dev-dependencies]
tokio    = { workspace = true, features = ["full"] }
tower    = { workspace = true }
rand = "0.9.1"
