[package]
name    = "openlifter-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
openlifter-common = { path = "../common" }   # relative to backend/
axum              = { workspace = true }
tokio             = { workspace = true }
tower-http        = { workspace = true }
tower             = { version = "0.4", features = ["util"] }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
dashmap           = { workspace = true }
uuid              = { workspace = true }
scrypt            = { workspace = true }
rand              = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
futures-util      = { workspace = true }
hyper             = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio    = { workspace = true, features = ["full"] }
tower    = "0.4" 