[package]
name = "backend-bin"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
backend-lib = { path = "../server-app" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures-util.workspace = true
